# cargo-free

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  changelog.md  flake.nix  index.html  readme.md  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
carg0_free/: all.html  fn.main.html  index.html
cargo_free/: all.html  fn.main.html  index.html
src/: lib.rs  main.rs
src/carg0_free/: main.rs.html
src/cargo_free/: main.rs.html
