[package]
name = "cargo-free"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
description = "A cargo subcommand to check if a given crate name is available."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SirWindfield/cargo-free"
version = "0.0.0"
edition = "2018"

[dependencies]
colored = { version = "2.0.0", optional = true }
indoc = "1.0.2"
pico-args = { version = "0.3.3", default-features = false }
ureq = { version = "1.3.0", default-features = false, features = ["tls"] }

[features]
colors = ["colored"]
