[package]
name = "cargo-free"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
description = "A cargo subcommand to check if a given crate name is available."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SirWindfield/cargo-free"
version = "0.5.0"
edition = "2018"

[dependencies]
colored = { version = "2.0.0", optional = true }
indoc = "1.0.3"
pico-args = { version = "0.3.4", default-features = false }
terminal-log-symbols = "0.1.5"
terminal-spinners = "0.1.3"
thiserror = "1.0.24"
ureq = { version = "1.5.4", default-features = false, features = ["tls"] }

[features]
default = ["colors"]
colors = ["colored"]
