[package]
name = "cargo-free"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
description = "A cargo subcommand to check if a given crate name is available."
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SirWindfield/cargo-free"
version = "0.6.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
serde_json = { version = "1.0.66", optional = true }
terminal-log-symbols = "0.1.6"
terminal-spinners = "0.3.1"
thiserror = "1.0.25"
ureq = { version = "1.5.4", default-features = false, features = ["tls"] }

[features]
default = ["json"]
json = ["serde_json"]
